test/files/neg/dynamic-SI-4536-typer.scala
abstract class dynamicClass {
  val x: Dynamic
  x.meth
}
